# boppo_cli

./: CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: release.yml
bins/boppo_cli/: Cargo.toml
bins/boppo_cli/src/: main.rs  wasm.rs
libs/boppo_credential_store/: Cargo.toml
libs/boppo_credential_store/src/: lib.rs
libs/boppo_device/: Cargo.toml
libs/boppo_device/src/: lib.rs
libs/boppo_device_https_client/: Cargo.toml
libs/boppo_device_https_client/src/: lib.rs
libs/boppo_usb/: Cargo.toml
src/: credential_store.rs  device.rs  device_https_client.rs  lib.rs  main.rs  usb.rs
