[package]
name = "boppo_cli"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "boppo"
path = "src/main.rs"

[dependencies]
anyhow = "1"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
boppo_credential_store = { path = "../../libs/boppo_credential_store" }
boppo_device = { path = "../../libs/boppo_device" }
boppo_device_https_client = { path = "../../libs/boppo_device_https_client" }
boppo_usb = { path = "../../libs/boppo_usb" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4.6.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
