[package]
name = "boppo_device"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-recursion = "1"
boppo_device_https_client = { path = "../boppo_device_https_client" }
mdns-sd = { version = "0.11", default-features = false, features = ["async"] }

[dev-dependencies]
boppo_device_https_client = { path = "../boppo_device_https_client", features = ["mock"] }
mockall = "0.12"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
