[package]
name = "boppo_device_https_client"
version = "0.1.0"
edition = "2021"

[features]
mock = ["dep:mockall"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
mockall = { version = "0.12", optional = true }
